streak/streak/kube/streak-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streak-client
  labels:
    app: streak-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streak-client
  template:
    metadata:
      labels:
        app: streak-client
    spec:
      containers:
        - name: streak-client
          image: gabidockerid/streak-client-image:1.0.0
          ports:
            - containerPort: 9999
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: streak-client
spec:
  selector:
    app: streak-client
  ports:
    - port: 9999
  type: ClusterIP
