streak/streak/kube/streak.yaml
# ... Deployment YAML definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streak-web
  labels:
    app: streak-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streak-web
  template:
    metadata:
      labels:
        app: streak-web
    spec:
      containers:
        - name: streak-web
          image: gabidockerid/streak-web-image:1.0.0
          ports:
            - containerPort: 8888
#          env:
#            - name: MONGO_URL
#              value: mongodb://mongo:27017/dev
          imagePullPolicy: Always

---
# ... Service YAML definition
apiVersion: v1
kind: Service
metadata:
  name: streak-web
spec:
  selector:
    app: streak-web
  ports:
    - port: 8888
#    - port: 80
#      targetPort: 8888
  type: ClusterIP
