streak/streak/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
#  defaultBackend:
#    service:
#      name: react-ui
#      port:
#        number: 80
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /streak/?(.*)
            pathType: Prefix
            backend:
              service:
                name: streak-web
                port:
                  number: 8888
          - path: /react/?(.*)
            pathType: Prefix
            backend:
              service:
                name: react-ui
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: custom-nginx
                port:
                  number: 80
